tests/lib/02-invalid-identity.rs
use matrize::*;

fn main() {
    let _ = Matrix::<2, 3>::identity();
}
